# egui_text_animation

./: Cargo.toml  README.md
examples/: animations.rs
