[package]
name = "egui_text_animation"
version = "0.1.4"
edition = "2024"
authors = ["dest4590"]
description = "A simple text animation using egui"
license-file = "LICENSE"
repository = "https://github.com/dest4590/egui_text_animation"

[dependencies]
eframe = "0.35.0"
egui = "0.35.0"
rand = "0.10.1"